# freeai.fyi

./: .gitignore  AGENTS.md  DEVNET.md  LAUNCH.md  LICENSE  Makefile  README.md  admin.css  admin.html  admin.js  index.html  portal.css  privacy.html  products.html  redeem.html  redeem.js  script.js  styles.css  terminal.html  terms.html  theme.css  vercel.json
.github/workflows/: ci.yml  (+1 more)
chrome-extension/: README.md  STORE_SUBMISSION.md  manifest.json  package-lock.json  package.json
desktop/: README.md
desktop/core/: Cargo.toml
desktop/core/src/: campaign.rs  events.rs  frequency.rs  impression.rs  lib.rs  queue.rs
desktop/core/tests/: core_tests.rs
extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  extension.js  package.json
landers/: advertisers.html  chatgpt.html  developers.html  founders.html  gemini.html  landers.css  marketers.html  researchers.html  students.html  writers.html
screenshots/: README.md
server/: .env.example  Dockerfile  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json
storage/: README.md
store-assets/: README.md
terminal/: README.md  package.json
tools/: gen-icons.py  gen-landers.mjs  gen-og.mjs  gen-store-assets.mjs  package-extension.sh  png_fit.py
vscode-extension/: .gitignore  .vscodeignore  INTEGRATION.md  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
web/: admin.html  admin.js  index.html  portal.css  privacy.html  products.html  redeem.html  redeem.js  script.js  styles.css  terminal.html  terms.html  theme.css  vercel.json
(+243 files in other folders)
